--- a/templates/pages/entreprise.html.twig
+++ b/templates/pages/entreprise.html.twig
@@ -43,7 +43,7 @@
                     </p>
 
                     <p>
-                        Nous vous proposons des formules sur mesure pour l'<strong>animation musicale</strong> de votre soirée d'entreprise. Nous sommes là pour vous accompagner, et vous guider de A à Z. Non seulement, nous vous proposons un <a href="{{ path('musiciens_soirees') }}" style="color: #555555;"><b>orchestre professionnel</b> pour votre soirée</a>, mais nous sommes également présents pour vous <strong>conseiller</strong>. Notre expérience en tant que prestataire événementiel nous permet de vous orienter au mieux sur la partie <strong>animation musicale</strong>, et de vous garantir une soirée exceptionnelle !
+                        Nous vous proposons des formules sur mesure pour l'<strong>animation musicale</strong> de votre soirée d'entreprise. Nous sommes là pour vous accompagner, et vous guider de A à Z. Non seulement, nous vous proposons un <a href="{{ path('musiciens_soirees') }}" style="color: #555555;"><b>groupe de musique professionnel</b> pour votre soirée</a>, mais nous sommes également présents pour vous <strong>conseiller</strong>. Notre expérience en tant que prestataire événementiel nous permet de vous orienter au mieux sur la partie <strong>animation musicale</strong>, et de vous garantir une soirée exceptionnelle !
                     </p>
 				</div>
 
@@ -207,6 +207,16 @@
 
 			<p>
 				Je travaille également avec de nombreux musiciens professionnels, qui peuvent vous proposer d'autres styles musicaux : groupe de <strong>soul / funk</strong>, ambiance <strong>pop / folk</strong>, jazz plus traditionnel... Ces différents groupes de musique sauront s'adapter à <strong>tout type de soirée</strong>, n'hésitez pas à m'envoyer un message pour vous guider dans vos recherches !
+			</p>
+
+			<h2 class="section-title section-title--small" style="margin-top: 15px;">Pourquoi un groupe de musique pour une soirée d'entreprise ?</h2>
+
+			<p>
+				Lorsque l'on prépare une soirée d'entreprise, un groupe de musique ne vient pas forcément de suite en tête. Et pourtant, un événement réussi passe aussi par une <strong>animation musicale</strong> de qualité. L'un des buts de votre soirée d'entreprise est de valoriser votre image de marque, et promouvoir les valeurs de votre société. Engager un groupe de musiciens professionnels, c'est la garantie d'ajouter une touche d'originalité non négligeable. L'ambiance musicale est totalement différente entre un morceau enregistré et diffusé sur des enceintes, et un groupe de musique en <i>live</i> ! 
+			</p>
+
+			<p>
+				Qu'il s'agisse d'un cocktail pour la sortie d'un nouveau produit, d'un départ en retraite ou encore du repas de fin d'années pour le personnel... Vous voulez que vos invités arrivent et repartent avec des étoiles dans les yeux. Avec une animation musicale pour votre soirée d'entreprise, ils en garderont un souvenir parfait, une bulle en dehors du temps..!
 			</p>
 
 			{{ include('utils/contact-cta.html.twig') }}
