--- a/templates/pages/musiciens_soirees.html.twig
+++ b/templates/pages/musiciens_soirees.html.twig
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block metadesc %}
-	<meta name="description" content="Vous cherchez des musiciens pour animer votre soirée, cocktail, mariage ? Découvrez nos groupes de musique jazz et chanson !">
+	<meta name="description" content="Vous cherchez des musiciens pour animer votre soirée privée ? Découvrez nos formules solo et en groupe !">
 {% endblock %}
 
 {% block body %}
