--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -49,6 +49,8 @@
         <!--<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css">-->
         <!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css" integrity="sha384-Zug+QiDoJOrZ5t4lssLdxGhVrurbmBWopoEl+M6BdEfwnCJZtKxi1KgxUyJq13dy" crossorigin="anonymous">-->
 
+        <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
+
         {% block stylesheets %}
             {{ encore_entry_link_tags('app') }}
 
@@ -160,19 +162,19 @@
                         {% endif %}
 
                         <li class="nav-item nav-item--social">
-                            <a title="Retrouvez moi sur Facebook" rel="nofollow" style="font-size: 24px;" class="nav-link" href="https://www.facebook.com/jeremydutheilaccordeoniste/" target="_blank"><i class="fab fa-facebook"></i></a>
+                            <a title="Retrouvez moi sur Facebook" rel="nofollow" style="font-size: 20px;" class="nav-link" href="https://www.facebook.com/jeremydutheilaccordeoniste/" target="_blank"><i class="fab fa-facebook"></i></a>
                         </li>
 
                         <li class="nav-item nav-item--social">
-                            <a title="Retrouvez moi sur Youtube" rel="nofollow" style="font-size: 24px;" class="nav-link" href="https://www.youtube.com/channel/UCTHC327qYeB34ri8Fgzubjw" target="_blank"><i class="fab fa-youtube"></i></a>
+                            <a title="Retrouvez moi sur Youtube" rel="nofollow" style="font-size: 20px;" class="nav-link" href="https://www.youtube.com/channel/UCTHC327qYeB34ri8Fgzubjw" target="_blank"><i class="fab fa-youtube"></i></a>
                         </li>
 
                         <li class="nav-item nav-item--social">
-                            <a title="Retrouvez moi sur Spotify" style="font-size: 24px;" class="nav-link" href="https://open.spotify.com/album/5h6OhuDtbu3D2M9kl1QRoV" target="_blank"><i class="fab fa-spotify"></i></a>
+                            <a title="Retrouvez moi sur Spotify" style="font-size: 20px;" class="nav-link" href="https://open.spotify.com/album/5h6OhuDtbu3D2M9kl1QRoV" target="_blank"><i class="fab fa-spotify"></i></a>
                         </li>
 
                         <li class="nav-item nav-item--social">
-                            <a title="Retrouvez moi sur Soundcloud" rel="nofollow" style="font-size: 24px;" class="nav-link" href="https://soundcloud.com/j-r-my-dutheil/" target="_blank"><i class="fab fa-soundcloud"></i></a>
+                            <a title="Retrouvez moi sur Soundcloud" rel="nofollow" style="font-size: 20px;" class="nav-link" href="https://soundcloud.com/j-r-my-dutheil/" target="_blank"><i class="fab fa-soundcloud"></i></a>
                         </li>
                     </ul>
                 </div>
