--- a/templates/contact/index.html.twig
+++ b/templates/contact/index.html.twig
@@ -23,7 +23,8 @@
 
 	<section class="content-section bg--blank page-section">
 		<div class="container">
-			<h1 class="section-title">Contact</h1>
+			<h1 class="section-title section-title--centered">Contact</h1>
+			<div class="hr hr-short hr-center"><span class="hr-inner "><span class="hr-inner-style"></span></span></div>
 
 			<p>
 				Une question ? Un projet à me proposer ? Besoin d'un devis pour l'animation musicale de votre événement ? <br>
