--- a/templates/pages/collaborations.html.twig
+++ b/templates/pages/collaborations.html.twig
@@ -59,7 +59,7 @@
 						Jazz manouche
 					</p>
 
-					<p>
+					<p class="text-center">
 						<a href="{{ path('jdsp') }}" class="btn btn-primary">En savoir plus</a>
 					</p>
 				</div>
@@ -82,7 +82,7 @@
 						Spectacle hommage à Edith Piaf
 					</p>
 
-					<p>
+					<p class="text-center">
 						<a href="#ruelamome" class="btn btn-primary">En savoir plus</a>
 					</p>
 				</div>
@@ -106,7 +106,7 @@
 						Chansons coquines et réalistes
 					</p>
 
-					<p>
+					<p class="text-center">
 						<a href="#marie" class="btn btn-primary">En savoir plus</a>
 					</p>
 				</div>
@@ -129,7 +129,7 @@
 						Chansons débraillées !
 					</p>
 
-					<p>
+					<p class="text-center">
 						<a href="#mime" class="btn btn-primary">En savoir plus</a>
 					</p>
 				</div>
@@ -152,7 +152,7 @@
 						Rock oriental
 					</p>
 
-					<p>
+					<p class="text-center">
 						<a href="#madjid" class="btn btn-primary">En savoir plus</a>
 					</p>
 				</div>
@@ -175,7 +175,7 @@
 						Trio chanson / swing
 					</p>
 
-					<p>
+					<p class="text-center">
 						<a href="#marquise" class="btn btn-primary">En savoir plus</a>
 					</p>
 				</div>
@@ -198,7 +198,7 @@
 						Grands standards de la chanson française
 					</p>
 
-					<p>
+					<p class="text-center">
 						<a href="#elena" class="btn btn-primary">En savoir plus</a>
 					</p>
 				</div>
@@ -221,7 +221,7 @@
 						Chanson française festive
 					</p>
 
-					<p>
+					<p class="text-center">
 						<a href="#fdf" class="btn btn-primary">En savoir plus</a>
 					</p>
 				</div>
