--- a/templates/utils/contact-cta.html.twig
+++ b/templates/utils/contact-cta.html.twig
@@ -1,5 +1,5 @@
 <div class="contact-cta">
-    <h3 class="contact-cta__title">Pour obtenir un devis gratuit, ou pour toute information, n'hésitez pas à me contacter : </h3>
+    <h3 class="contact-cta__title" style="margin-bottom: 20px;">Parlez moi de votre projet (devis sous 24h) : </h3>
 
     <div class="row">
         <div class="col-lg-4">
