--- a/templates/anims/index.html.twig
+++ b/templates/anims/index.html.twig
@@ -398,8 +398,9 @@
 		</div>
 
 		<div class="home-container-section">
-			<h2 class="section-title section-title--centered">Animation musicale <small>Profitez de notre expérience</small></h2>
+			<h2 class="section-title section-title--centered">Animation musicale </h2>
 			<div class="hr hr-short hr-center"><span class="hr-inner "><span class="hr-inner-style"></span></span></div>
+			<h2 class="section-title section-title--centered"><small>Profitez de notre expérience</small></h2>
 
 			<div class="container">
 				<p>
