--- a/templates/pages/manouche.html.twig
+++ b/templates/pages/manouche.html.twig
@@ -211,8 +211,9 @@
 			<span id="formules"></span>
 
 			<div class="container">
-				<h2 class="section-title section-title--centered">Quelques formules jazz manouche pour vos événements</h2>
+				<h2 class="section-title section-title--centered">Quelques formules </h2>
 				<div class="hr hr-short hr-center"><span class="hr-inner "><span class="hr-inner-style"></span></span></div>
+				<h2 class="section-title section-title--centered"><small>jazz manouche pour vos événements</small></h2>
 
             	<h3 class="section-title section-title--smaller">Duo jazz manouche (accordéon / guitare) - Jérémy Dutheil & Solal Poux</h3>
 
