--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -85,7 +85,7 @@
 								</p>
 
 								<p>
-									Ici il ne s'agit pas d'un concert classique, mais de s'adapter en fonction de votre lieu et de l'ambiance attendue pour votre soirée. Seul ou accompagné par d'autres musiciens (guitariste, contrebassiste, ...), je me plairai à jouer des standards de jazz et <strong>jazz manouche</strong> lors d'une <a href="{{ path('entreprise') }}">soirée d'entreprise</a>, d'un repas en musique ou au vin d'honneur de <a href="{{ path('animations_mariages') }}">votre mariage</a>. Très à la mode actuellement, je propose également des <a href="{{ path('guinguette') }}">soirées guinguettes</a> en solo ou avec chanteuse, autour de la chanson française d'époque.
+									Lors de l'<a href="https://fr.jooble.org/emploi-animateur-musical" target="_blank">emploi d'un animateur musical</a>, il ne s'agit pas d'un concert classique, mais de s'adapter en fonction de votre lieu et de l'ambiance attendue pour votre soirée. Seul ou accompagné par d'autres musiciens (guitariste, contrebassiste, ...), je me plairai à jouer des standards de jazz et <strong>jazz manouche</strong> lors d'une <a href="{{ path('entreprise') }}">soirée d'entreprise</a>, d'un repas en musique ou au vin d'honneur de <a href="{{ path('animations_mariages') }}">votre mariage</a>. Très à la mode actuellement, je propose également des <a href="{{ path('guinguette') }}">soirées guinguettes</a> en solo ou avec chanteuse, autour de la chanson française d'époque.
 								</p>
 
 								<p>
