--- a/templates/pages/agenda.html.twig
+++ b/templates/pages/agenda.html.twig
@@ -27,9 +27,9 @@
 
 	<section class="content-section bg--blank page-section">
 		<div class="container bg--blank">
-			<h1 class="section-title">
-				Agenda - Les concerts
-			</h1>
+			<h1 class="section-title section-title--centered">Agenda</h1>
+			<div class="hr hr-short hr-center"><span class="hr-inner "><span class="hr-inner-style"></span></span></div>
+			<h2 class="section-title section-title--centered"><small>Les concerts</small></h2>
 
             <p>
                 Retrouvez ci-dessous les prochaines dates de concert avec Jérémy Dutheil et ses différents projets (Jérémy Dutheil & Solal Poux - Jazz manouche, Rue la Môme, Marie Pétrolette ou solo). Pour suivre l'actualité et les dernières nouvelles, rendez-vous sur <a href="https://www.facebook.com/jeremydutheilaccordeoniste" target="_blank">la page Facebook Jérémy Dutheil</a>.
