--- a/templates/pages/collaborations.html.twig
+++ b/templates/pages/collaborations.html.twig
@@ -26,7 +26,8 @@
 
 	<section class="content-section bg--blank page-section">
 		<div class="container">
-			<h1 class="section-title">Collaborations artistiques</h1>
+			<h1 class="section-title section-title--centered">Collaborations artistiques</h1>
+			<div class="hr hr-short hr-center"><span class="hr-inner "><span class="hr-inner-style"></span></span></div>
 
 			<p>
 				Artiste passionné et touche à tout, je travaille avec différentes formules artistiques aux profils très variés ; parce que l'accordéon est un <strong>instrument complet</strong> et étonnant, je trouve important et formateur de se frotter à plusieurs styles musicaux, ainsi qu'à des configurations scéniques différentes. Chacune de ses expériences me permet d'enrichir mon jeu, proposant ainsi de nouvelles influences à chacun de mes projets.
