--- a/templates/pages/videos.html.twig
+++ b/templates/pages/videos.html.twig
@@ -26,7 +26,9 @@
 
 	<section class="content-section bg--blank page-section">
 		<div class="container">
-			<h1 class="section-title">Vidéos <small>accordéon jazz & chanson</small></h1>
+			<h1 class="section-title section-title--centered">Vidéos accordéon</h1>
+			<div class="hr hr-short hr-center"><span class="hr-inner "><span class="hr-inner-style"></span></span></div>
+			<h2 class="section-title section-title--centered"><small>Jazz & Chanson</small></h2>
 
 			<p>
 				Accordéoniste jazz & chanson, je vous invite à découvrir mon répertoire en solo ou accompagné d'autres musiciens. L'ensemble de mes vidéos d'accordéon est disponible en ligne sur <a href="https://www.youtube.com/channel/UCTHC327qYeB34ri8Fgzubjw" target="_blank">ma page Youtube</a>.
