--- a/templates/pages/jdsp.html.twig
+++ b/templates/pages/jdsp.html.twig
@@ -20,10 +20,15 @@
 
 <section class="content-section bg--blank page-section">
     <div class="container bg--blank">
-        <h1 class="section-title" style="margin-top: 25px;">
+        <h1 class="section-title section-title--centered" >
             Jérémy Dutheil & Solal Poux
-            <small>Jazz manouche avec accordéon</small>
         </h1>
+
+        <div class="hr hr-short hr-center"><span class="hr-inner "><span class="hr-inner-style"></span></span></div>
+        
+        <h2 class="section-title section-title--centered">
+            <small>Jazz manouche avec accordéon !</small>
+        </h2>
 
         <div class="row">
             <div class="col-md-12">
