--- a/templates/pages/manouche.html.twig
+++ b/templates/pages/manouche.html.twig
@@ -15,15 +15,15 @@
 {% block body %}
 	<section class="flash flash--limited">
 		<div class="flash-item">
-			{% include 'utils/picture.html.twig' with { 'sources': { 'webp': 'img/manouchebg.webp',
-																				 'jpeg': 'img/manouchebg.jpg'
+			{% include 'utils/picture.html.twig' with { 'sources': { 'webp': 'img/manouche-auzon.webp',
+																				 'jpeg': 'img/manouche-auzon.jpg'
 																			   },
-																	'default': 'img/manouchebg.jpg',
+																	'default': 'img/manouche-auzon.jpg',
 																	'lazyload': false,
 																	'alt': 'Un groupe de jazz manouche pour vos événements - Avec accordéon',
 																	'title': 'Un groupe de jazz manouche pour vos événements - Avec accordéon',
 																	'class': 'flash-item__background',
-																	'style': 'top: -50%;' } %}
+																	'style': 'top: -40%;' } %}
 		</div>
 	</section>
 
